# nanollada

./: .gitignore  guidelines.md  modelling_llada.py  pyproject.toml  train.py  train_llada.py
config/: train_shakespeare_char.py
llada/: modelling_llada.py
scripts/: train_minimal.py
tiny_llada_model/: model.pt
