[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llada"
version = "0.1.0"
description = "A minimal language model implementation"
authors = [
    {name = "Thomas Capelle"}
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["llada"]